--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,6 +15,8 @@ jobs:
       go-version: ${{ steps.versions.outputs.go-version }}
       golangci-version: ${{ steps.versions.outputs.golangci-version }}
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
       - name: Set version
         id: versions
         run: |
