style(scanner): fix lint issues

--- a/.github/workflows/_ci.yaml
+++ b/.github/workflows/_ci.yaml
@@ -4,13 +4,11 @@ on:
   workflow_call:
     inputs:
       go-version:
-        required: false
+        required: true
         type: string
-        default: "1.24"
       golangci-version:
-        required: false
+        required: true
         type: string
-        default: "v2"
 jobs:
   lint:
     name: Lint Go Code
