--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,11 +21,11 @@ jobs:
         id: versions
         run: |
           go_version=$(grep -m 1 '^go ' go.mod | awk '{print $2}')
-          echo "go-version=$go_version" >> $GITHUB_ENV
+          echo "go-version=$go_version" >> $GITHUB_OUTPUT
           echo "Go version set to $go_version"
 
           golangci_version=$(grep -m 1 '^## ' .golangci.yaml| awk '{print $NF}')
-          echo "golangci-version=$golangci_version" >> $GITHUB_ENV
+          echo "golangci-version=$golangci_version" >> $GITHUB_OUTPUT
           echo "Golangci-lint version set to $golangci_version"
   lint:
     name: Lint
