--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,6 @@ on:
     branches: [main]
 
 jobs:
-  # Other jobs in your main workflow...
   setup:
     name: Setup
     runs-on: ubuntu-latest
@@ -34,3 +33,14 @@ jobs:
     with:
       go-version: ${{ needs.setup.outputs.go-version }}
       golangci-version: ${{ needs.setup.outputs.golangci-version }}
+  semantic_release:
+    name: Bump Version
+    needs: [setup, lint]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Release
+        uses: go-semantic-release/action@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
