--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,6 +7,10 @@ on:
 
 jobs:
   build_app:
+    permissions:
+      contents: read
+      packages: write
+    secrets: inherit
     uses: ./.github/workflows/_build.yaml
     strategy:
       matrix:
