--- a/.github/workflows/_build.yaml
+++ b/.github/workflows/_build.yaml
@@ -46,6 +46,7 @@ jobs:
             ghcr.io/${{ github.repository }}-${{ inputs.app }}
           tags: |
             type=semver,pattern={{version}}
+            type=semver,pattern={{major}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}.{{minor}}.{{patch}}
             type=sha
