--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -46,11 +46,12 @@ tasks:
       APP: "{{.APP}}"
     cmds:
       - docker build
+        --build-arg APP_NAME={{.APP}}
         --build-arg VERSION={{.VERSION}}
         --build-arg COMMIT={{.COMMIT}}
         --build-arg BUILD_TIME={{.BUILD_TIME}}
         -t {{.IMAGE_NAME}}-{{.APP}}:{{.VERSION}}
-        -f Dockerfile.{{.APP}} .
+        -f Dockerfile .
   run/api:
     desc: Run Rest API application
     cmds:
