ci: add needs to build

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -19,6 +19,7 @@ jobs:
       contents: read
       packages: write
     secrets: inherit
+    needs: prepare
     uses: ./.github/workflows/_build.yaml
     strategy:
       matrix:
